# shotrip-prod

./: .gitignore  README.md  pnpm-lock.yaml
.github/workflows/: deploy-aurora-user-sync.yml  deploy-front-app.yml  deploy-lens-api.yml  deploy-operation.yml  deploy-stamp-api.yml  terraform.yml
apps/main-apps/: next.config.ts  package.json
apps/main-apps/posts/essentials/food/: sushi-etiquette-guide.md
apps/main-apps/posts/essentials/transportation/: about-crowded-train.md  about-japanese-ship.md  about-overnight-bus.md  about-rental-car.md  about-rental-cycle.md  buy-train-ticket.md  japan-ic-cards.md  japanese-local-bus.md  riding-bullet-train.md  riding-japanese-taxi.md  weather-and-transportation.md
apps/main-apps/posts/revision_history/: 2026-03-13-initial-release.md  2026-03-14-function-added.md  2026-03-15-function-added.md  2026-03-16-function-added.md  2026-03-17-function-added.md  2026-03-18-function-added.md  2026-03-19-function-added.md  2026-03-20-function-added.md  2026-03-21-function-added.md  2026-03-22-function-added.md  2026-03-23-function-added.md  2026-03-24-function-added.md  2026-03-25-function-added.md  2026-03-26-function-added.md  2026-03-27-function-added.md  2026-03-28-function-added.md  2026-03-29-function-added.md  2026-03-30-function-added.md  2026-03-31-function-added.md  2026-04-01-function-added.md  2026-04-02-function-added.md
apps/main-apps/public/: search-index.json
apps/main-apps/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/main-apps/src/app/403/: page.tsx
apps/main-apps/src/config/: env.ts
apps/main-apps/src/hooks/: Auth.ts  useAuthActions.ts
apps/main-apps/src/types/: aboutPage.ts  articleInfiniteGrid.ts  articleSearch.ts  articlesPage.ts  categoriesKey.ts  categoryPage.ts  chatMessage.ts  chatbotWidget.ts  checkPoint.ts  completeModal.ts  deleteAccountModal.ts  emptyStatePage.ts  favoriteSpotContext.ts  featureKey.ts  footer.ts  hearder.ts  landingPage.ts  lemsSendPayload.ts  lensContext.ts  lensRoot.ts  localeSwitcher.ts  navbar.ts  notFoundPage.ts  params.ts  prefPage.ts  prefecturesKey.ts  profileRegistrationModal.ts  profileUpdateModal.ts  regionsPage.ts  regoinsKey.ts  revision.ts  route.ts  searchIndex.ts  sideLinks.ts  speech.d.ts  spot.ts  spotEvent.ts  stampAppPage.ts  stampHomePage.ts  stampReward.ts  (+7 more)
backend/chatbot_main/: Dockerfile  main.py  pyproject.toml
backend/chatbot_payment/: Dockerfile  pyproject.toml  token_payment.py
backend/spot_fav/: Dockerfile  pyproject.toml  spot_fav.py
backend/stamp_api/: Dockerfile  app-def.json  main.py  pyproject.toml
backend/stamp_api/app/: db_utils.py  models.py
infra/terraform/: .terraform.lock.hcl  alb.tf  apigateway.tf  athena.tf  aurora.tf  backend.tf  backend_setup.tf  cloudfront.tf  cloudwatch_alarms.tf  cognito.tf  data.tf  dynamodb.tf  ec2.tf  ecr.tf  ecs.tf  eventbridge.tf  glue.tf  guardduty.tf  iam.tf  iam_github.tf  lambda.tf  oidc.tf  providers.tf  s3.tf  sns.tf  sqs.tf  ssm.tf  variables.tf  vpc.tf
operations/: Dockerfile  pyproject.toml
operations/src/: other-data-ingestion.py  spot-data-ingestion.py
user-operations/aurora-user-sync/: Dockerfile  pyproject.toml  root.crt
user-operations/aurora-user-sync/src/: main.py
(+101 files in other folders)
