[project]
name = "shotrip-lens"
version = "0.1.0"
description = ""
authors = [
    {name = "shota harita",email = "arsenal14xaka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.129.0,<0.130.0)",
    "openai (>=2.21.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pinecone (>=6.0.0,<7.0.0)",
    "mangum (>=0.21.0,<0.22.0)",
    "boto3 (>=1.42.54,<2.0.0)",
    "stripe (>=14.4.0,<15.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
