[project]
name = "chatbot-payment"
version = "0.1.0"
description = ""
authors = [
    {name = "shota harita",email = "arsenal14xaka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "mangum (>=0.21.0,<0.22.0)",
    "boto3 (>=1.42.63,<2.0.0)",
    "stripe (>=14.4.1,<15.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
