[project]
name = "spot-fav"
version = "0.1.0"
description = ""
authors = [
    {name = "shota harita",email = "arsenal14xaka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "mangum (>=0.21.0,<0.22.0)",
    "boto3 (>=1.42.63,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
